# fogo-stake-pool

./: .gitignore  .typos.toml  Cargo.toml  Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.toml  spl-stake-pool
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: dependabot-auto-merge.yml  deploy-webapp.yml  main.yml  publish-js.yml  publish-rust.yml
assets/: README.md  metadata.json  paymaster.toml
assets/ihub/: metadata.json
clients/cli/: Cargo.toml  README.md
clients/cli/scripts/: setup-test-validator.sh
clients/cli/src/: main.rs  squads.rs
clients/js/: package.json  rollup.config.mjs  tsconfig.json
clients/js/src/: codecs.ts  constants.ts  index.ts  instructions.ts  layouts.ts
clients/js/src/utils/: index.ts  instruction.ts  math.ts  stake.ts
clients/js/test/: calculation.test.ts  instructions.test.ts  layouts.test.ts  mocks.ts
clients/py/: README.md  optional-requirements.txt  requirements.txt
clients/py/stake_pool/: constants.py
clients/py/tests/: conftest.py  test_a_time_sensitive.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  deployment.md  development.md  getting-started.md  multisig.md  program-guide.md  testnet-integration.md  verification.md
docs/ignition/: referral-integration.md  testnet-integration.md
interface/: Cargo.toml  README.md  idl.json
interface/src/: error.rs  lib.rs  pda.rs  state.rs
interface/tests/: compatibility.rs
program/: Cargo.toml  program-id.md
program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
program/tests/: create_pool_token_metadata.rs  deposit_wsol_with_session.rs  deposit_wsol_with_session_edge_cases.rs  update_validator_list_balance.rs  vsa_add.rs  vsa_remove.rs  withdraw_edge_cases.rs  withdraw_stake_with_session.rs  withdraw_wsol_with_session.rs  withdraw_wsol_with_session_edge_cases.rs
program/tests/helpers/: mod.rs  wsol.rs
scripts/: check-solana-version.mjs  cliff.toml  generate-clients.mjs  generate-clients.mts  link-solana-version.mjs  upgrade-template.mjs  utils.mjs
scripts/ci/: set-env.mjs
scripts/client/: format-js.mjs  lint-js.mjs  publish-js.mjs  test-js.mjs  test-py.mjs
scripts/program/: build.mjs  format.mjs  lint.mjs  test.mjs
scripts/rust/: audit.mjs  build-sbf.mjs  format.mjs  lint.mjs  publish.mjs  test-sbf.mjs  test.mjs
