[workspace]
resolver = "2"
members = ["clients/cli", "clients/rust", "interface", "program"]

[workspace.package]
authors = ["Tempest Maintainers"]
repository = "https://github.com/Tempest-Finance/fogo-stake-pool"
readme = "./README.md"
license = "Apache-2.0"
edition = "2021"

[workspace.metadata.cli]
solana = "2.3.4"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
overflow-checks = true
