[workspace]
resolver = "2"
members = ["clients/cli", "clients/rust", "interface", "program"]

[workspace.package]
authors = ["Tempest Maintainers"]
repository = "https://github.com/Tempest-Finance/fogo-stake-pool"
readme = "./README.md"
license = "Apache-2.0"
edition = "2021"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.toolchains]
format = "nightly-2026-01-22"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
overflow-checks = true
