[package]
name = "fogo-stake-pool-interface"
version = "0.1.0"
description = "Fogo Stake Pool Interface - State types for deserializing stake pool accounts"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "README.md"

[lib]
crate-type = ["lib"]

[[bin]]
name = "generate-idl"
path = "src/bin/generate-idl.rs"
required-features = ["codama"]

[dependencies]
borsh = { version = "1.5", features = ["derive", "unstable__schema"], optional = true }
bytemuck = { version = "1.25", features = ["derive"] }
codama = { version = "0.7", optional = true }
codama-macros = { version = "0.7", optional = true }
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
solana-program = "2.3"
spl-pod = { version = "0.5", features = ["borsh"] }
thiserror = "2.0"

[package.metadata.cargo-machete]
ignored = ["serde", "serde_derive"] # Optional deps used via feature flags

[package.metadata.solana]
program-id = "SP1s4uFeTAX9jsXXmwyDs1gxYYf7cdDZ8qHUHVxE1yr"

[target.'cfg(not(target_os = "solana"))'.dependencies]
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
spl-stake-pool = { package = "fogo-stake-pool-program", path = "../program", features = ["no-entrypoint"] }

[features]
default = ["borsh"]
borsh = ["dep:borsh", "solana-program/borsh"]
codama = ["dep:codama", "dep:codama-macros", "dep:serde_json", "serde"]
serde = ["dep:serde", "dep:serde_derive"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
