[package]
name = "fogo-stake-pool-program"
version = "2.0.3"
description = "Fogo Stake Pool on-chain program (fork of SPL Stake Pool)"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = "https://github.com/Tempest-Finance/fogo-stake-pool"
keywords = ["fogo", "solana", "stake-pool", "liquid-staking"]
categories = ["cryptography::cryptocurrencies"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
borsh = "1.5.7"
bytemuck = "1.25"
fogo-sessions-sdk = "0.7.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.4"
serde = "1.0.219"
serde_derive = "1.0.103"
solana-program = "2.3.0"
solana-security-txt = "1.1.1"
solana-stake-interface = "1"
solana-system-interface = "1"
spl-pod = { version = "0.5.1", features = ["borsh",] }
spl-associated-token-account = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "=8.0.0", features = ["no-entrypoint",] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint",] }
thiserror = "2.0"
bincode = "1.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.7"
solana-program-test = "2.3.4"
solana-sdk = "2.2.1"
solana-vote-program = "2.2.0"
spl-token = { version = "8.0", features = ["no-entrypoint",] }
test-case = "3.3"

[lib]
name = "spl_stake_pool"
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
