[package]
name = "fogo-stake-pool"
version = "2.0.3"
description = "Fogo Stake Pool CLI — manage stake pools on the Fogo blockchain"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
homepage = "https://github.com/Tempest-Finance/fogo-stake-pool"
keywords = ["fogo", "solana", "stake-pool", "liquid-staking"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.3"
serde = "1.0.219"
solana-account-decoder = "2.3.4"
solana-clap-utils = "2.3.4"
solana-cli-config = "2.3.4"
solana-cli-output = "2.3.4"
solana-client = "2.3.4"
solana-logger = "2.2.0"
solana-program = "2.3.0"
solana-remote-wallet = "2.3.4"
solana-sdk = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-stake-interface = "1"
solana-system-interface = "1"
spl-associated-token-account = { version = "=7.0.0", features = ["no-entrypoint",] }
spl-associated-token-account-client = { version = "=2.0.0" }
spl-stake-pool = { package = "fogo-stake-pool-program", version = "=2.0.3", path = "../../program", features = ["no-entrypoint",] }
spl-token = { version = "=8.0", features = ["no-entrypoint",] }
spl-token-2022 = { version = "=8.0", features = ["no-entrypoint",] }
bincode = "1.3.1"
bs58 = "0.5"
base64 = "0.22"

[[bin]]
name = "fogo-stake-pool"
path = "src/main.rs"
